--- a/python.html
+++ b/python.html
@@ -50,11 +50,38 @@
                         <h4>The Zen of Python</h4>
                 </div>
             </div>
-            <div id="middle content">
-                
+            <div id="middle-content">
+                <div class="">
+                    <h4>Getting Started</h4>
+                    <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea 
+                        sprouts fava bean collard greens.</p>
+                        <ul>
+                            <li><a href="#">Beginner's Guide, Programmers</a></li>
+                            <li><a href="#">Beginner's Guide, Non-Programmers</a></li>
+                            <li><a href="#">Code sample and snippets for Beginners</a></li>
+                        </ul>
+                 </div>
+
+                       <div class="">
+                    <h4>Applications</h4>
+                    <p>Inspired by <span>Bacon Ipsum</span>, Tuna Ipsum makes your lorem ipsum text altogether fishier.
+                         There is also a free WordPress plugin available to download.</p>
+                        <ul>
+                            <li><a href="#">proinde vos postulo esse magis grape</a></li>
+                            <li><a href="#">prairie turnip jícama coriander quandong</a></li>
+                            <li><a href="#">zucchini radicchio maize burdock avocado</a></li>
+                            <li><a href="#">viral inferno, nam rick grimes malum cerebro.</a></li>
+                            <li><a href="#">We'll need to have a look inside you with this</a></li>
+                        </ul>
+                 </div>
             </div>
             <div id="footer">
-                
+                <ul>
+                    <li>Help and General Contact</li>
+                    <li>Diversity Intiatives</li>
+                    <li>Submit Website Bugs</li>
+                </ul>
+                <p>CopyrightⒸ2001-2017</p> 
             </div>
        </div>
     </body>
